--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/esm/index.js"
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js"
   },
   "scripts": {
-    "build": "rm -r dist/ && make build"
+    "build": "rm -r dist/ && make build",
+    "test": "yarn build && yarn test.cjs && yarn test.esm",
+    "test.cjs": "mocha --config ./spec/cjs/.mocharc.yml",
+    "test.esm": "mocha --config ./spec/esm/.mocharc.yml"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.6",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.5.9",
+    "@types/sinon": "^10.0.16",
+    "@types/sinon-chai": "^3.2.9",
     "@types/web": "^0.0.114",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
